--- a/soar_maze_escape/package.xml
+++ b/soar_maze_escape/package.xml
@@ -7,8 +7,8 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="root@todo.todo">root</maintainer>
-
+  <maintainer email="ib24x502@technikum-wien.at">Arthur PELLEGRINI</maintainer>
+  <maintainer email="wi24x501@technikum-wien.at">Clément BRISSARD</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
